# insurance-glm-cluster

./: README.md  pyproject.toml
notebooks/: 01_r2vf_demo.py  benchmark.py  run_tests.py  submit_tests.py  submit_tests_v2.py  submit_tests_v3.py  submit_tests_v4.py  submit_tests_v5.py  upload_and_test.py
src/insurance_glm_cluster/: __init__.py  backends.py  clusterer.py  constraints.py  diagnostics.py  level_map.py  penalties.py  utils.py
tests/: conftest.py  test_backends.py  test_clusterer.py  test_constraints.py  test_diagnostics.py  test_exposure.py  test_integration.py  test_level_map.py  test_ordinal.py  test_penalties.py  test_utils.py
