[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-glm-cluster"
version = "0.2.0"
description = "Deprecated. Use insurance-glm-tools instead."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
keywords = ["insurance", "pricing", "GLM", "clustering", "actuarial"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "insurance-glm-tools>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-glm-cluster"
Repository = "https://github.com/burning-cost/insurance-glm-cluster"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_glm_cluster"]
